--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,22 @@
     margin: 0;
     box-sizing: border-box;
 }
+// SCROLL OUT
+[data-scroll] {
+    transition: 1s;
+    transform: scale(.5);
+}
+
+[data-scroll="in"] {
+    opacity: 1;
+    transform: scale(1);
+}
+
+[data-scroll="out"] {
+    opacity: 0;
+}
+// END OF SCROLL OUT
+
 html {
     scroll-behavior: smooth;
     scroll-padding-top: 5em;
