--- a/scss/style.scss
+++ b/scss/style.scss
@@ -576,7 +576,7 @@ body {
 // pad sectiion 
 .paralax {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: $overlay-blue-dark;
     background-repeat: no-repeat;
     background-size: contain;
