--- a/css/style.css
+++ b/css/style.css
@@ -1474,7 +1474,7 @@ body {
       width: 100%;
       height: 100%;
       padding: 1vh 5vw; }
-      @media (max-width: 1024px) {
+      @media (max-width: 1200px) {
         #header .header #navbar {
           padding: 0 5vw; } }
       #header .header #navbar .brand {
@@ -1492,7 +1492,7 @@ body {
             color: #ead2a1;
             padding: 0;
             margin: 0; }
-      @media (max-width: 1024px) {
+      @media (max-width: 1200px) {
         #header .header #navbar .nav-list .links-container {
           position: absolute;
           top: 0;
@@ -1548,7 +1548,7 @@ body {
               transition-delay: .7s; }
             #header .header #navbar .nav-list .links-container.active ul li:nth-child(6) {
               transition-delay: .8s; }
-      @media (min-width: 1025px) {
+      @media (min-width: 1200px) {
         #header .header #navbar .nav-list .links-container .nav-logo {
           display: none; } }
       #header .header #navbar .nav-list .links-container .nav-logo {
@@ -1556,7 +1556,7 @@ body {
         opacity: 1;
         z-index: 1;
         height: 15%;
-        width: 40%;
+        width: 35%;
         border-radius: 5px;
         position: sticky;
         top: 1em;
@@ -1570,6 +1570,9 @@ body {
           height: 100%;
           object-fit: cover;
           border-radius: 5px; }
+        @media (min-width: 768px) {
+          #header .header #navbar .nav-list .links-container .nav-logo {
+            width: 20%; } }
       #header .header #navbar .nav-list ul li {
         list-style: none; }
         #header .header #navbar .nav-list ul li a {
@@ -1612,7 +1615,7 @@ body {
         #header .header #navbar .nav-list ul li:hover a::after {
           transform: translate(-50%, -50%) scale(1);
           letter-spacing: initial; }
-      @media (min-width: 1025px) {
+      @media (min-width: 1200px) {
         #header .header #navbar .nav-list ul {
           display: block;
           height: auto;
