--- a/scss/style.scss
+++ b/scss/style.scss
@@ -672,19 +672,6 @@ body {
             margin: 0;
         }
         // end of desktop
-        // col-right box-shadow
-        // &:after {
-        //     position: absolute;
-        //     content: '';
-        //     top: 0;
-        //     left: 0;
-        //     width: 100%;
-        //     height: 100%;
-        //     border-radius: 5px;
-        //     z-index: -10;
-        //     box-shadow: $box-light-top-bg;
-        // }
-        // end of col-right box-shadow
         .about-title {
             display: flex;
             flex-direction: column;
@@ -766,6 +753,28 @@ body {
             border-radius: 15px;
             text-transform: uppercase;
             transition: .3s;
+            position: relative;
+            // button states
+            &.open {
+                // 'close - read-more text in button'
+                &::after {
+                    position: absolute;
+                    content: 'close';
+                    display: grid;
+                    place-items: center;
+                    top: 0;
+                    left: 0;
+                    border-radius: 15px;
+                    border: none;
+                    outline: none;
+                    width: 100%;
+                    height: 100%;
+                    opacity: 1;
+                    background-color: $overlay-blue-darker;
+                }
+            }
+
+            // end of button states
 
             &:hover {
                 transform: scale(.97);
